<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/show_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/tenth"
        android:gravity="center"
        android:hint="@string/noTitle"
        android:textSize="@dimen/titleTextSize" >
    </TextView>

    <TextView
        android:id="@+id/show_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@integer/fifteen"
        android:gravity="center"
        android:hint="@string/noDescription"
        android:textSize="@dimen/showSmallTextSize" >
    </TextView>

    <TextView
        android:id="@+id/show_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:textSize="@dimen/showSmallTextSize" >
    </TextView>

    <ImageView
        android:id="@+id/show_photo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/phlogImage"
        android:layout_marginBottom="@dimen/imageMargin"
        android:layout_marginTop="@dimen/imageMargin"
        android:layout_weight="@integer/third" >
    </ImageView>

    <TextView
        android:id="@+id/show_location"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="@integer/tenth"
        android:hint="@string/noLocation"
        android:textSize="@dimen/showSmallTextSize" >
    </TextView>

    <TextView
        android:id="@+id/show_orientation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="@integer/tenth"
        android:hint="@string/noOrientation"
        android:textSize="@dimen/showSmallTextSize" >
    </TextView>

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="myClickHandler"
        android:text="@string/play" />

</LinearLayout>